--- a/TheCodingSpace/src/app/aboutus/aboutus.component.html
+++ b/TheCodingSpace/src/app/aboutus/aboutus.component.html
@@ -7,7 +7,7 @@ TheCodingSpace is a software engineering partner to 50+ organizations across the
 </p> -->
 
 <div class="card">
-    <img class="card-img-top" src="../assets/python.PNG" alt="Card image cap" height="500">
+    <img class="card-img-top" src="../assets/card7.jpg" alt="Card image cap" height="500">
     <div class="card-body">
       <!-- <h5 class="card-title">Card title</h5> -->
       <p class="card-text">
