--- a/TheCodingSpace/src/app/header/header.component.html
+++ b/TheCodingSpace/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">The Coding Space</a>
+      <a class="navbar-brand" href="#">TheCodingSpace</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -14,6 +14,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/contactUs']" routerLinkActive="router-link-active">Contack US</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/Career']" routerLinkActive="router-link-active" >Career</a>
           </li>
 
           <li class="nav-item dropdown">
