--- a/TheCodingSpace/src/app/carousel/carousel.component.html
+++ b/TheCodingSpace/src/app/carousel/carousel.component.html
@@ -6,21 +6,21 @@
     </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../assets/python.PNG" alt="Los Angeles" width="1100" height="500">
+        <img src="../assets/card3.jpg" alt="Los Angeles" width="1100" height="500">
         <div class="carousel-caption">
           <h3>Los Angeles</h3>
           <p>We had such a great time in LA!</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="../assets/price.PNG" alt="Chicago" width="1100" height="500">
+        <img src="../assets/card5.jpg" alt="Chicago" width="1100" height="500">
         <div class="carousel-caption">
           <h3>Chicago</h3>
           <p>Thank you, Chicago!</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="../assets/prerequireSpring.PNG" alt="New York" width="1100" height="500">
+        <img src="../assets/card6.jpg" alt="New York" width="1100" height="500">
         <div class="carousel-caption">
           <h3>New York</h3>
           <p>We love the Big Apple!</p>
